--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
@@ -36,3 +36,19 @@
     position: relative;
     overflow: hidden;
   }
+
+
+  .fw-i{
+    font-style: italic;
+  }
+  .fs-15{
+    font-size: 15px;
+  }
+
+
+ 
+  #list ul li {
+    text-align: left;
+    list-style: disc;
+    margin: 10px 0px;
+  }
