--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -149,7 +149,18 @@
     </div>
 
 
-    <div *ngIf="(method=='Charity')">thank you
+    <div *ngIf="(method=='Charity')">
+
+      <ion-text ></ion-text>
+
+      <ion-card mode="ios"  >
+        <ion-item>
+          <ion-label class="ion-text-wrap">Thank you for your generosity, Dok! We truly appreciate your kindness and heartfelt service!</ion-label> 
+
+        </ion-item>
+      </ion-card>
+
+
     </div>
 
 
