Cosmetic changes:    - Fix grammar.    - Add png image assets for charity and insurance.

--- a/src/app/chh-web-components/chh-app-insurance-coordinator-inquiry/chh-app-insurance-coordinator-inquiry.component.html
+++ b/src/app/chh-web-components/chh-app-insurance-coordinator-inquiry/chh-app-insurance-coordinator-inquiry.component.html
@@ -1,5 +1,5 @@
 <ion-item>
-  <ion-label  class="ion-text-wrap">Are you a Insurance Coordinator?</ion-label> 
+  <ion-label  class="ion-text-wrap">Are you an Insurance Coordinator?</ion-label> 
   <!--ion-checkbox color="mango" checked="false" (ionChange)="viewtoggle($event)"></ion-checkbox-->
   </ion-item>
   <ion-segment (ionChange)="viewtoggle($event)"  [(ngModel)]="pfInsCoor">
