--- a/src/app/pages/in-patient-patient-information/chh-app-icdrvs/chh-app-icdrvs.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-icdrvs/chh-app-icdrvs.page.html
@@ -49,7 +49,7 @@
             -->
 
           <ion-item>
-            <ion-label>Are you a Insurance Coordinator?</ion-label> 
+            <ion-label>Are you an Insurance Coordinator?</ion-label> 
             <ion-checkbox color="mango" checked="false"></ion-checkbox>
             </ion-item>
 
