--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -64,6 +64,7 @@
 
   
     <div *ngIf="(method=='Insurance')">
+      <img src="assets/img/insurance.png" alt="Care of Insurance">
       <ion-card mode="ios" *ngIf="!isDesktop " >
         <ion-item>
           <ion-label>&#8369; </ion-label>
@@ -77,7 +78,7 @@
         </ion-item>
       </ion-card>
 
-      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rate asdf. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
       <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
       </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
@@ -154,6 +155,7 @@
       <ion-text ></ion-text>
 
       <ion-card mode="ios"  >
+        <img src="assets/img/charity.png" alt="Charity Thanks">
         <ion-item>
           <ion-label class="ion-text-wrap">Thank you for your generosity, Dok! We truly appreciate your kindness and heartfelt service!</ion-label> 
 
@@ -360,7 +362,7 @@ ______          _    _
                   </ion-item>
                 </ion-card>
     
-                <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rates. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
                 <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
                 </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
