--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -78,7 +78,7 @@
         </ion-item>
       </ion-card>
 
-      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rate asdf. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
       <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
       </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
