--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -49,7 +49,8 @@
   </div>
   <div  *ngIf ="ionStart">
     <div class="ion-text-center">
-      <br /> <br /> <br /> <br />
+      <!-- <br /> <br /> <br /> <br /> -->
+      <img src="assets/img/search.png" alt="Search">
       <h3>Search to see case rates</h3>
     </div>
   </div>
