--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -48,7 +48,7 @@
 
   <ion-grid  *ngIf="!isDesktop && method == 'Philhealth'"  class="ion-no-padding ">
 
-    <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" *ngIf="method=='Philhealth'">View Case Rates</ion-button> 
+    <!-- <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" *ngIf="method=='Philhealth'">View Case Rates</ion-button>  -->
   <ion-row >
 
   <ion-col size="6" offset="3"  >
@@ -56,6 +56,7 @@
   <div class="vertical-center">
     <div class="center">
       <ion-img src="../../../../assets/img/{{method1}}.jpg" class="ion-align-self-end"></ion-img>
+      <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" *ngIf="method=='Philhealth'">View Case Rates</ion-button>
     </div>   
   </div>
   </ion-col>
@@ -78,13 +79,13 @@
         </ion-item>
       </ion-card>
 
-      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fs-12 ion-text-wrap">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
-      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
-      </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
+      </li><li><ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
 
-      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
-      </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+      </li><li><ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text></li></ul>
 
  
 
@@ -115,34 +116,34 @@
 
       <ul *ngIf="txtPhilHealthPF">
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">Accept PHIC rate.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">Accept PHIC rate.</ion-text>
         </li>
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">No additional professional fee charge to your patient.</ion-text>
         </li>
       </ul>
 
       <ul *ngIf="!txtPhilHealthPF && txtPhilHealthVAT">
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
         </li>
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
         </li>
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
         </li>
       </ul>
 
       <ul *ngIf="!txtPhilHealthPF && !txtPhilHealthVAT">
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
         </li>
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
         </li>
         <li>
-          <ion-text class="fw-i fs-15 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text>
+          <ion-text class="fs-12 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text>
         </li>
       </ul>
 
@@ -157,7 +158,7 @@
       <ion-card mode="ios"  >
         <img src="assets/img/charity.png" alt="Charity Thanks">
         <ion-item>
-          <ion-label class="ion-text-wrap">Thank you for your generosity, Dok! We truly appreciate your kindness and heartfelt service!</ion-label> 
+          <ion-label class="ion-text-wrap" >Thank you for your generosity, Dok! We truly appreciate your kindness and heartfelt service!</ion-label> 
 
         </ion-item>
       </ion-card>
@@ -176,7 +177,7 @@
         <ion-row>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
-           PF Submission Status
+           Status
             <ion-progress-bar value="{{progressStatus}}"></ion-progress-bar>
           </ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
@@ -362,13 +363,13 @@ ______          _    _
                   </ion-item>
                 </ion-card>
     
-                <ul *ngIf="txtInsurancePF"><li> <ion-text class="fw-i fs-15 ion-text-wrap">Accept HMO insurance rates. </ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF"><li> <ion-text class="fs-12 ion-text-wrap">Accept HMO insurance rates. </ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
-                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
-                </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
+                </li><li><ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
           
-                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
-                </li><li><ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fw-i fs-15 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+                <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+                </li><li><ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text></li></ul>
           
          
               </div>
