--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -158,16 +158,16 @@ ______             _     _                        _   _                   _
     </ion-item>
     <ul>
       <li>
-        <ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
       </li>
       <li>
-        <ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
       </li>
       <li *ngIf="withVat == 'Yes'">
-        <ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
       </li>
       <li *ngIf="withVat == 'No'">
-        <ion-text class="fw-i fs-15 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
       </li>
   </ul>
   </div>
@@ -478,16 +478,16 @@ ______             _     _                       ______             _
         </ion-item>
         <ul>
           <li>
-            <ion-text class="fw-i fs-15 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
           </li>
           <li>
-            <ion-text class="fw-i fs-15 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's PhilHealth case coverage.</ion-text>
           </li>
           <li *ngIf="withVat == 'Yes'">
-            <ion-text class="fw-i fs-15 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text>
           </li>
           <li *ngIf="withVat == 'No'">
-            <ion-text class="fw-i fs-15 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
+            <ion-text class="fs-12 ion-text-wrap"> No VAT will be added to your overall professional fee.</ion-text>
           </li>
       </ul>
 
