PF Status progress bar warning color.

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -178,7 +178,7 @@
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
            Status
-            <ion-progress-bar value="{{progressStatus}}"></ion-progress-bar>
+            <ion-progress-bar value="{{progressStatus}}" color="warning"></ion-progress-bar>
           </ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         </ion-row>
