--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -324,7 +324,7 @@ ______             _     _                        _   _                   _
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4">
           Status
-          <ion-progress-bar value="0.5"></ion-progress-bar>
+          <ion-progress-bar value="0.5" color="warning"></ion-progress-bar>
         </ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
 
