In-Patient professional fee and summary enhancements.

--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -67,7 +67,7 @@
     <ion-grid >
       <ion-row >
         <ion-col size="5" ><b>Amount:</b>     </ion-col>
-        <ion-col size="7"><b>P {{data1 | number}}</b></ion-col>
+        <ion-col size="7"><b>&#8369; {{data1 | number}}</b></ion-col>
       </ion-row>
       <ion-row >
         <ion-col size="5">Pay Venue:     </ion-col>
