--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -69,7 +69,7 @@
       <ion-card mode="ios" *ngIf="!isDesktop " >
         <ion-item>
           <ion-label>&#8369; </ion-label>
-          <ion-input type="number" placeholder="0" [(ngModel)]="InsurancePF" (ionChange)="isurancePF()"></ion-input>
+          <ion-input color="danger" type="number" placeholder="0" [(ngModel)]="InsurancePF" (ionChange)="isurancePF()"></ion-input>
         </ion-item>
       </ion-card>
       <ion-card mode="ios" *ngIf="!isDesktop && InsuranceShowVat" >
@@ -79,13 +79,13 @@
         </ion-item>
       </ion-card>
 
-      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fs-12 ion-text-wrap">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No additional professional fee charge to your patient.</ion-text></li></ul>
+      <ul *ngIf="txtInsurancePF"><li> <ion-text class="fs-12 ion-text-wrap" color="danger">Accept HMO insurance rate. </ion-text></li><li><ion-text class="fs-12 ion-text-wrap" color="danger">No additional professional fee charge to your patient.</ion-text></li></ul>
                          
       <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient. </ion-text>
-      </li><li><ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
+      </li><li><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">VAT percentage will be added to your overall professional fee.</ion-text></li></ul>
 
       <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false"><li><ion-text class="fs-12 ion-text-wrap">This is the overall professional fee that will be charged to your patient.</ion-text>
-      </li><li><ion-text class="fs-12 ion-text-wrap">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text></li></ul>
+      </li><li><ion-text class="fs-12 ion-text-wrap" color="danger">Net amount will vary after deducting your patient's insurance coverage.</ion-text></li><li><ion-text class="fs-12 ion-text-wrap">No VAT will be added to your overall professional fee.</ion-text></li></ul>
 
  
 
@@ -96,14 +96,14 @@
     <div *ngIf="(method=='Philhealth')">
       <ion-card mode="ios" *ngIf="!isDesktop" >
         <ion-item>
-          <ion-label>PhilHealth Only?</ion-label> 
+          <ion-label>Accept PhilHealth Only?</ion-label> 
           <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
         </ion-item>
       </ion-card>
       <ion-card mode="ios" *ngIf="!isDesktop  && PhilhealthShowValue" >
         <ion-item>
           <ion-label>&#8369; </ion-label>
-          <ion-input type="number" minlength="0" placeholder="0" [(ngModel)]="PhilhealthPF"  (ionChange)="philhealthPF()"></ion-input>
+          <ion-input color="danger" type="number" minlength="0" placeholder="0" [(ngModel)]="PhilhealthPF"  (ionChange)="philhealthPF()"></ion-input>
         </ion-item>
       </ion-card>
 
@@ -158,7 +158,7 @@
       <ion-card mode="ios"  >
         <img src="assets/img/charity.png" alt="Charity Thanks">
         <ion-item>
-          <ion-label class="ion-text-wrap" >Thank you for your generosity, Dok! We truly appreciate your kindness and heartfelt service!</ion-label> 
+          <ion-label class="ion-text-wrap" >Thank you for your generosity, Dok! &#10084; We truly appreciate your kindness and heartfelt service!</ion-label> 
 
         </ion-item>
       </ion-card>
@@ -353,7 +353,7 @@ ______          _    _
                 <ion-card mode="ios" >
                   <ion-item>
                     <ion-label>&#8369; </ion-label>
-                    <ion-input type="number" placeholder="0" [(ngModel)]="InsurancePF" (ionChange)="isurancePF()"></ion-input>
+                    <ion-input color="danger" type="number" placeholder="0" [(ngModel)]="InsurancePF" (ionChange)="isurancePF()"></ion-input>
                   </ion-item>
                 </ion-card>
                 <ion-card mode="ios" *ngIf="InsuranceShowVat" >
@@ -385,7 +385,7 @@ ______          _    _
                 <ion-card mode="ios" *ngIf="PhilhealthShowValue" >
                   <ion-item>
                     <ion-label>&#8369; </ion-label>
-                    <ion-input type="number" placeholder="0" [(ngModel)]="PhilhealthPF"  (ionChange)="philhealthPF()"></ion-input>
+                    <ion-input color="danger" type="number" placeholder="0" [(ngModel)]="PhilhealthPF"  (ionChange)="philhealthPF()"></ion-input>
                   </ion-item>
                 </ion-card>
           
