--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
@@ -41,6 +41,7 @@
   .fw-i{
     font-style: italic;
   }
+  
   .fs-15{
     font-size: 15px;
   }
@@ -54,4 +55,9 @@
     text-align: left;
     list-style: disc;
     margin: 10px 0px;
+  }
+
+  ion-input {
+    font-size: x-large;
+    font-weight: 900;
   }
