--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -115,12 +115,13 @@ ______             _     _                        _   _                   _
 
 
   <div *ngIf="ifShowSummary == true">
+    <img src="assets/img/online-transactions.png">
     <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b></ion-item>
     <ion-item class="ion-no-margin">
       <ion-grid *ngFor="let x of data">
         <ion-row >
-          <ion-col size="5">Name:     </ion-col>
-          <ion-col size="7">{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</ion-col>
+          <ion-col size="5"><b>Name:</b>     </ion-col>
+          <ion-col size="7"><b>{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</b></ion-col>
         </ion-row>
         <ion-row >
           <ion-col size="5">Hospital Site:</ion-col>
@@ -143,8 +144,8 @@ ______             _     _                        _   _                   _
     <ion-item class="ion-no-margin">
       <ion-grid >
         <ion-row >
-          <ion-col size="5">Amount:     </ion-col>
-          <ion-col size="7">{{data1 | number}}</ion-col>
+          <ion-col size="5"><b>Amount:</b>     </ion-col>
+          <ion-col size="7"><b>&#8369; {{data1 | number}}</b></ion-col>
         </ion-row>
         <ion-row >
           <ion-col size="5">Pay Venue:     </ion-col>
@@ -191,25 +192,26 @@ ______             _     _                        _   _                   _
   </app-chh-app-patient-header>
       <ion-card  mode="ios">
       <ion-item lines="none">
-      <ion-label>Are you an Insurance Coordinator?</ion-label> 
-      <ion-checkbox color="mango" checked="false"  [(ngModel)]="isCoordinator"></ion-checkbox>
+        <ion-label class="ion-text-wrap">Are you an Insurance Coordinator?</ion-label> 
+        <ion-checkbox color="mango" checked="false"  [(ngModel)]="isCoordinator"></ion-checkbox>
       </ion-item>
       </ion-card>
       <ion-card  mode="ios">
       <ion-item lines="none">
-        <ion-label>Have you seen this Patient?</ion-label> 
+        <ion-label class="ion-text-wrap">Have you seen this Patient?</ion-label> 
         <ion-checkbox color="mango"  value="isPatientSeen" (click)="isPatientSeenf('isPatientSeen',isPatientSeen)"  [(ngModel)]="isPatientSeen"></ion-checkbox>
         </ion-item>
       </ion-card>
       <ion-card  mode="ios">
         <ion-list [class.disabled]="disabledselection">
-          <ion-list-header>Select Pay Venue</ion-list-header>
+          <ion-list-header>Select Pay Venue <ion-icon slot="end" name="wallet-outline"></ion-icon>
+          </ion-list-header>
             <ion-item lines="none">
               <ion-label>Insurance (HMO)</ion-label>
               <ion-checkbox color="mango"  slot="end" value="insurance" [(ngModel)]="insurance" (click)="buttonclick('insurance',insurance)" ></ion-checkbox>
             </ion-item>
             <ion-item lines="none" >
-              <ion-label>Phil Health</ion-label>
+              <ion-label>PhilHealth</ion-label>
               <ion-checkbox color="mango"  slot="end" value="philhealth" [(ngModel)]="philhealth"  (click)="buttonclick('philhealth',philhealth)" ></ion-checkbox>
             </ion-item>   
             <ion-item lines="none">
@@ -304,7 +306,7 @@ ______             _     _                        _   _                   _
         <img src="../../../../assets/img/philhealth.jpg">
       </ion-avatar>
       <ion-label>
-        <h2>Phil Health</h2>
+        <h2>PhilHealth</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
       </ion-label>
     </ion-item>
@@ -435,12 +437,13 @@ ______             _     _                       ______             _
 
 
       <div *ngIf="ifShowSummary == true">
+        <img src="assets/img/online-transactions.png">
         <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b></ion-item>
         <ion-item class="ion-no-margin">
           <ion-grid *ngFor="let x of data">
             <ion-row >
-              <ion-col size="5">Name:     </ion-col>
-              <ion-col size="7">{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</ion-col>
+              <ion-col size="5"><b>Name:</b>     </ion-col>
+              <ion-col size="7"><b>{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</b></ion-col>
             </ion-row>
             <ion-row >
               <ion-col size="5">Hospital Site:</ion-col>
@@ -463,8 +466,8 @@ ______             _     _                       ______             _
         <ion-item class="ion-no-margin">
           <ion-grid >
             <ion-row >
-              <ion-col size="5">Amount:     </ion-col>
-              <ion-col size="7">{{data1 | number}}</ion-col>
+              <ion-col size="5"><b>Amount:</b>     </ion-col>
+              <ion-col size="7"><b>&#8369; {{data1 | number}}</b></ion-col>
             </ion-row>
             <ion-row >
               <ion-col size="5">Pay Venue:     </ion-col>
@@ -524,25 +527,25 @@ ______             _     _                       ______             _
       <div *ngIf="ifShowSummary == false">
     <ion-card  mode="ios">
       <ion-item>
-        <ion-label>Are you an Insurance Coordinator?</ion-label> 
+        <ion-label class="ion-text-wrap">Are you an Insurance Coordinator?</ion-label> 
         <ion-checkbox color="mango" checked="false" [(ngModel)]="isCoordinator"></ion-checkbox>
       </ion-item>
     </ion-card>
     <ion-card  mode="ios">
       <ion-item>
-        <ion-label>Have you seen this Patient?</ion-label> 
+        <ion-label class="ion-text-wrap">Have you seen this Patient?</ion-label> 
         <ion-checkbox color="mango"  value="isPatientSeen" (click)="isPatientSeenf('isPatientSeen',isPatientSeen)"  [(ngModel)]="isPatientSeen"></ion-checkbox>
       </ion-item>
     </ion-card>
     <ion-card  mode="ios">
       <ion-list [class.disabled]="disabledselection">
-        <ion-list-header>Select Pay Venue</ion-list-header>
+        <ion-list-header>Select Pay Venue <ion-icon slot="end" name="wallet-outline"></ion-icon></ion-list-header>
         <ion-item>
           <ion-label>Insurance (HMO)</ion-label>
           <ion-checkbox color="mango"  slot="end" value="insurance" [(ngModel)]="insurance" (click)="buttonclick('insurance',insurance)" ></ion-checkbox>
         </ion-item>
         <ion-item>
-          <ion-label>Phil Health</ion-label>
+          <ion-label>PhilHealth</ion-label>
           <ion-checkbox color="mango"  slot="end" value="philhealth" [(ngModel)]="philhealth"  (click)="buttonclick('philhealth',philhealth)" ></ion-checkbox>
         </ion-item>
         <ion-item>
@@ -603,7 +606,7 @@ ______             _     _                       ______             _
             <img src="../../../../assets/img/philhealth.jpg">
           </ion-avatar>
           <ion-label>
-            <h2>Phil Health</h2>
+            <h2>PhilHealth</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
           </ion-label>
         </ion-item>
